# md2anki

./: .gitignore  CLAUDE.md  LICENSE  MEMORY.md  README.md  README_en.md  baseline.py  md2anki_here.cmd  md2anki_here_dryrun.cmd  pyproject.toml
.github/: copilot-instructions.md
doc/: design_gold_reference_v0.1.md  release_checklist_v0.1.md
md2anki/: __init__.py  anki_client.py  cli.py  html_renderer.py  markdown_processor.py  pipeline.py
tests/e2e/: manual_vault.7z  test_manual_e2e_flow.py
tests/fixtures/parser_renderer/vault/: 01_basic.md  02_parent_fallback_h2.md  03_math_code.md  04_lists_table_link_image.md  05_ambiguous_image.md  06_blank_lines_metadata.md  07_noanki.md  08_h4_without_parent.md
tests/fixtures/parser_renderer/vault/sub/: 09_h4_without_parent_sub.md
tests/integration/: test_parser_renderer_integration.py  test_pipeline_with_fixtures.py
tests/unit/: test_anki_client.py  test_cli.py  test_html_renderer.py  test_markdown_processor.py
